# vectorshift-hubspot-integration

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  main.py  pyproject.toml
backend/integrations/airtable/: __init__.py
backend/integrations/hubspot/: __init__.py  data.py  utils.py
backend/integrations/notion/: __init__.py
frontend/: .env.example  Dockerfile  bun.lockb  nginx.conf  package-lock.json  package.json
frontend/src/: data-form.js  integration-form.js
frontend/src/integrations/: airtable.js  hubspot.js  notion.js
